trying _data in netlify

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -15,3 +15,9 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
+    
+  - name: "patients" # Used in routes, e.g. /admin/collections/blog
+    label: "Patients" # Used in the UI
+    folder: "_data" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{id}}-{{first_name}}-{{last_name}}" # Filename template i.e. YYYY-MM-DD-title.md
