--- a/admin/config.yml
+++ b/admin/config.yml
@@ -18,6 +18,10 @@ collections:
     
   - name: "patients" # Used in routes, e.g. /admin/collections/blog
     label: "Patients" # Used in the UI
-    folder: "_data" # The path to the folder where the documents are stored
+    folder: "patients" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{id}}-{{first_name}}-{{last_name}}" # Filename template i.e. YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Body", name: "body", widget: "markdown"}
